@@ -12,6 +12,7 @@ version 0.02:
 	- promote unique tokens to replace database id
 	- uniform load/remove/save
 	- identity ownership only as sub-set of Account
+	- encryption of secrets into ::Util
 
 version 0.01: Wed Sep 09 09:21:50 PM CEST 2024
 	- Initial
